# Semantic-Embedding-Reconstruction

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
docs/: architecture.md  dataset_schema.md
src/Abalation_Studies/HyperParam_Sweep/: OOM_reruns_failed_configs.yaml  hyperparam_sweep.py  rerun_hyper_param_sweep.py  sweep_config.yaml
src/Datasets/: cnn_dataset_push.py  dataset_analysis.ipynb  dataset_push.py  eda_analysis.py  embedding_generator.py  max_token_len.py
src/Evaluation/: embedding_visualization.ipynb  eval-script.ipynb  languague_evaluation.ipynb  modified_rouge-eval.ipynb  performance_comparison.py  rouge-eval.ipynb  run_inference.py  size_comparison.ipynb
src/GPU_Scripts/: dataset_push.py  gpu_training_script.py
src/HF_Push/: README.md  configuration_inverter.py  inference.py  modeling_inverter.py  no_of_tokens.py  push_model.py  requirements.txt
src/Sampler_Tool/: CLAUDE.md  README.md  app.py  config.py  factory.py  main.py  sampler.py
src/Sampler_Tool/models/: __init__.py  encoder.py  inverter.py  mlp.py
src/Sampler_Tool/templates/: index.html
src/Training/: gpu_training_script.py  requirements.txt
